# StockControl-Cultivos-MLWorker

./: .env.local.example  .gitignore  CLAUDE.md  Dockerfile  README.md  cactus_workflow.txt  main.py  pyproject.toml  result_e2e.json
app/: __init__.py  config.py  main.py
app/api/: __init__.py  deps.py
app/core/: __init__.py  industry_config.py  pipeline.py  pipeline_dsl.py  pipeline_executor.py  pipeline_parser.py  pipeline_step.py  processing_context.py  processor_registry.py  step_registry.py  tenant_config.py
app/infra/: __init__.py  database.py  logging.py  storage.py
app/ml/: __init__.py  model_cache.py  model_registry.py
app/models/: __init__.py  base.py  density_parameter.py  packaging_catalog.py  packaging_color.py  packaging_material.py  packaging_type.py  product.py  product_category.py  product_family.py  product_size.py  product_state.py
app/processors/: __init__.py  base_processor.py  classifier_processor.py  detector_processor.py  estimator_processor.py  sahi_detector_processor.py  segmentation_processor.py
app/schemas/: __init__.py  callback.py  common.py  pipeline_definition.py  task.py
app/services/: __init__.py  agro_processing_service.py  backend_client.py  base_processing_service.py  processing_service.py
app/steps/: __init__.py
config/: agro.yaml  vending.yaml
deploy/terraform/: cloudrun.tf  cloudtasks.tf  iam.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  versions.tf
docs/: pipeline-dsl.md
docs/plans/: 2026-02-16-pipeline-dsl-design.md  2026-02-16-post-processors-design.md  2026-02-16-post-processors-impl.md  2026-02-17-pipeline-dsl-serializable.md  2026-02-18-database-access-design.md  (+5 more)
migrations/: 001_add_tenant_config.sql
scripts/: setup_local_testing.py  simulate_cloud_task.py
tests/: __init__.py  conftest.py  test_pipeline_dsl.py  test_pipeline_executor.py
(+47 files in other folders)
